clean the notebook

--- a/deploying_model_on_vertex_ai.ipynb
+++ b/deploying_model_on_vertex_ai.ipynb
@@ -2,7 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "41e80993",
+   "id": "c42d2d75",
+   "metadata": {},
+   "source": [
+    "# Deploying an ML model on Vertex AI\n",
+    "\n",
+    "In this tutorial, you will be learning to deploy an ML model on Vertex AI. Specifically you will,\n",
+    "\n",
+    "* Download a text dataset and process that locally\n",
+    "* Upload the processed data to GCS\n",
+    "* Create a Vertex AI dataset\n",
+    "* Create a custom ML model in TensorFlow and train it on the data\n",
+    "* Deploy the model with an endpoint\n",
+    "* Clean up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bac6876",
    "metadata": {},
    "source": [
     "<table align=\"left\">\n",
@@ -14,22 +31,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dec4f13c",
+   "id": "3f1e90e0",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
     "\n",
-    "Create a project called `gcp-tf-review-classification`\n",
-    "\n",
-    "Enable Vertex AI API\n",
-    "\n",
-    "Open this notebook in Google colab"
+    "* Create a project called `gcp-tf-review-classification`\n",
+    "* Enable Vertex AI API\n",
+    "* Open up one tab for GCS and one for Vertex AI\n",
+    "* Open this notebook in Google colab"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39713d80",
+   "id": "7800f15a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada60298",
+   "id": "2a17ff74",
    "metadata": {},
    "source": [
     "## Print tensorflow version"
@@ -47,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43df1d43",
+   "id": "8c4c6db0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "392bddf4",
+   "id": "93db2233",
    "metadata": {},
    "source": [
     "## Authenticate to GCP"
@@ -66,17 +82,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ac88ca1",
+   "id": "fbd89737",
    "metadata": {},
    "outputs": [],
    "source": [
     "from google.colab import auth\n",
-    "auth.authenticate_user()"
+    "auth.authenticate_user()\n",
+    "\n",
+    "from google.cloud import aiplatform\n",
+    "# Initialize the Vertex AI SDK\n",
+    "aiplatform.init(project=PROJECT_ID, location=REGION, staging_bucket=BUCKET_URI)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f98db539",
+   "id": "572747e4",
    "metadata": {},
    "source": [
     "## Importing required libraries"
@@ -85,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04cedfa0",
+   "id": "db66346e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab1ea7da",
+   "id": "ad780640",
    "metadata": {},
    "source": [
     "## Setting environment variables"
@@ -109,31 +129,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "909f9d94",
+   "id": "3a672e31",
    "metadata": {},
    "outputs": [],
    "source": [
     "PROJECT_ID = \"gcp-tf-review-classification\"\n",
     "BUCKET_URI = \"gs://imdb-movie-review-dataset\" \n",
+    "MODEL_BUCKET_URI = \"gs://imdb-movie-review-models\" \n",
     "REGION = \"us-central1\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfc3edb9",
+   "id": "5dac991b",
    "metadata": {},
    "outputs": [],
    "source": [
     "os.environ[\"PROJECT_ID\"] = PROJECT_ID\n",
     "os.environ[\"REGION\"] = REGION\n",
-    "os.environ[\"BUCKET_URI\"] = BUCKET_URI"
+    "os.environ[\"BUCKET_URI\"] = BUCKET_URI\n",
+    "os.environ[\"MODEL_BUCKET_URI\"] = MODEL_BUCKET_URI"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32b6f27f",
+   "id": "b4d83821",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "363cdb52",
+   "id": "41801d57",
    "metadata": {},
    "source": [
     "## Downloading the dataset\n",
@@ -155,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58aa5e69",
+   "id": "aba35c94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "429bb50f",
+   "id": "c509e106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caaa6fec",
+   "id": "e2e162a2",
    "metadata": {},
    "source": [
     "## Create a GCS bucket"
@@ -225,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08e60d35",
+   "id": "1223a4ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,12 +258,19 @@
     "else\n",
     "    echo \"Bucket ${BUCKET_URI} doesn't exist. Creating a new one\"\n",
     "    gsutil mb -l $REGION -p $PROJECT_ID $BUCKET_URI\n",
+    "fi\n",
+    "\n",
+    "if $(gsutil ls $MODEL_BUCKET_URI); then\n",
+    "    echo \"Bucket ${MODEL_BUCKET_URI} already exists.\";\n",
+    "else\n",
+    "    echo \"Bucket ${MODEL_BUCKET_URI} doesn't exist. Creating a new one\"\n",
+    "    gsutil mb -l $REGION -p $PROJECT_ID $MODEL_BUCKET_URI\n",
     "fi"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "62e80271",
+   "id": "1948f967",
    "metadata": {},
    "source": [
     "## Copy the data"
@@ -250,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fa9cd0e",
+   "id": "3c9705de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,10 +289,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d58da1c",
+   "id": "769381dc",
    "metadata": {},
    "source": [
-    "## Managing json Schema with Pydantic\n",
+    "## Parsing and dumping json with Pydantic\n",
     "\n",
     "add links and info about the schema we have to use"
    ]
@@ -271,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "965aa85c",
+   "id": "47f96615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43c59454",
+   "id": "3cf80783",
    "metadata": {},
    "source": [
     "## Creating Vertex AI compatible instances"
@@ -312,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f28b24cd",
+   "id": "b25ebc6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fb7c387",
+   "id": "3778524f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +446,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "4fb5956c",
+   "id": "6dc8d4a2",
    "metadata": {},
    "source": [
     "## Writing the data to GCS\n",
@@ -428,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95493b4d",
+   "id": "2c54571b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,12 +473,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4011abe2",
+   "id": "f48fcd72",
    "metadata": {},
    "outputs": [],
    "source": [
     "!gsutil cp data/train_instances.jsonl $BUCKET_URI\n",
     "!gsutil cp data/test_instances.jsonl $BUCKET_URI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d1b6ec9",
+   "metadata": {},
+   "source": [
+    "## Vertex AI specific constants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be0730a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATASET_NAME = \"imdb-review-dataset\"\n",
+    "MODEL_ID = \"imdb-review-model\""
    ]
   },
   {
@@ -459,7 +507,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "c75f8d5d",
+   "id": "17f34cf9",
    "metadata": {},
    "source": [
     "## Creating a Vertex AI dataset\n",
@@ -470,30 +518,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31685eed",
+   "id": "b9d71cad",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "DATASET_NAME = \"imdb-review-dataset\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c8e7539",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from google.cloud import aiplatform\n",
-    "\n",
-    "# Initialize the Vertex AI SDK\n",
-    "aiplatform.init(project=PROJECT_ID, location=REGION, staging_bucket=BUCKET_URI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f3f2873",
+   "id": "45ea79cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,30 +555,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ce7131f",
+   "id": "66455d51",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "JOB_NAME = \"imdb_review_classification_automl_train\"\n",
-    "\n",
-    "MODEL_ID = \"imdb-review-model\"\n",
-    "MODEL_VERSION_ALIAS = \"v0\""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "804c0e0c",
+   "id": "44409368",
    "metadata": {},
    "source": [
-    "## This can take several hours to complete\n",
+    "## Training a model \n",
     "\n",
-    "## Quotas for custom models\n",
-    "`custom_model_training_cpus`\n",
-    "`custom_model_training_n2_cpus`\n",
-    "`all_regions_gpus`\n",
+    "There are two methods for getting a model into Vertex AI\n",
     "\n",
+    "1. Run a training job on Vertex AI (**This can take several hours to complete**)\n",
+    "  * AutoMLTextTrainingJob\n",
+    "  * CustomMLTrianingJob\n",
+    "2. Upload an already trained model to Vertex AI  \n",
+    " \n",
+    "\n",
+    "### Sample code to trigger an AutoML training job\n",
     "\n",
     "```\n",
+    "JOB_NAME = \"imdb_review_classification_automl_train\"\n",
+    "MODEL_ID = \"imdb-review-model\"\n",
+    "MODEL_VERSION_ALIAS = \"automl\"\n",
+    "\n",
     "training_job = aiplatform.AutoMLTextTrainingJob(\n",
     "    display_name=JOB_NAME,\n",
     "    prediction_type=\"classification\",\n",
@@ -562,57 +598,70 @@
     "    model_version_description=\"Initial version of the model\",\n",
     "    sync=False\n",
     ")\n",
+    "```\n",
+    "\n",
+    "### Quotas to know for custom models training\n",
+    "\n",
+    "```\n",
+    "custom_model_training_cpus\n",
+    "custom_model_training_n2_cpus`\n",
+    "all_regions_gpus\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71c98dbe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dadd9dad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gcloud ai models upload \\\n",
-    "  --region=LOCATION \\\n",
-    "  --display-name=MODEL_NAME \\\n",
-    "  --container-image-uri=IMAGE_URI \\\n",
-    "  --artifact-uri=PATH_TO_MODEL_ARTIFACT_DIRECTORY"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9f67eac3",
+   "id": "40c4475c",
    "metadata": {},
    "source": [
-    "## Referring to a model async\n",
+    "---\n",
     "\n",
+    "# Before you proceed any further, make sure you have uploaded the trained model successfully to the `MODEL_BUCKET_URI` \n",
+    "---\n",
     "\n",
-    "```\n",
-    "model_resource_name = MODEL_ID#+\"@\"+MODEL_VERSION_ALIAS\n",
-    "model = aiplatform.Model(model_name=MODEL_ID)\n",
-    "```"
+    "## Uploading the trained model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bbac9e3",
+   "id": "9580e73e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!gcloud ai models upload \\\n",
+    "    --region=$REGION \\\n",
+    "    --model-id=$MODEL_ID \\\n",
+    "    --display-name=\"imdb-review-model\" \\\n",
+    "    --container-image-uri=\"us-docker.pkg.dev/vertex-ai/training/tf-cpu.2-11:latest\" \\\n",
+    "    --artifact-uri=$MODEL_BUCKET_URI/text_classifier \\\n",
+    "    --version-aliases=\"custom\" \\\n",
+    "    --verbosity=\"debug\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c306411a",
+   "metadata": {},
+   "source": [
+    "## Deploying a model endpoint\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfaab52c",
+   "id": "48c9106f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_resource_name = MODEL_ID + \"@custom\" #+\"@\"+MODEL_VERSION_ALIAS\n",
+    "model = aiplatform.Model(model_name=MODEL_ID)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27df4c0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72c5c219",
+   "id": "a4690377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5e04a17",
+   "id": "1c90401e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,9 +690,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "119bedbb",
+   "metadata": {},
+   "source": [
+    "## Predicting using the deployed endpoint"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab69d415",
+   "id": "e6e320e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,23 +724,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "971deb97",
+   "id": "7f92ab8c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "input_raw = {\"content\":\"horrible movie, it was so predictable\"}\n",
-    "\n",
-    "predictions = endpoint.predict(instances=[input_raw])\n",
-    "y_class = np.argmax(predictions.predictions[0][\"confidences\"])\n",
-    "y_label_name = predictions.predictions[0][\"displayNames\"][y_class]\n",
-    "\n",
-    "print(f\"Input text: {input_raw['content']}\")\n",
-    "print(f\"\\tLabel: {y_label_name}\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "692f999b",
+   "id": "ccfaafdf",
    "metadata": {},
    "source": [
     "## Cleanup"
@@ -692,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06c10749",
+   "id": "87b96e8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a937b6d3",
+   "id": "bd2479ab",
    "metadata": {},
    "outputs": [],
    "source": [
