--- a/training_custom_model.ipynb
+++ b/training_custom_model.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6783ed91",
+   "id": "df132594",
    "metadata": {},
    "source": [
+    "# Creating and training a custom model\n",
+    "\n",
+    "In this section of the tutorial you will,\n",
+    "\n",
+    "* Download the data from GCS and process to be appropriate for training a model\n",
+    "* Create a model which uses BERT as the base\n",
+    "* Train the model on the processed data\n",
+    "* Save the model and upload to GCS\n",
+    "\n",
     "<table align=\"left\">\n",
     "    <td>\n",
     "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/gcp-tf-review-classification/blob/master/training_custom_model.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\"/>Run in Google Colab</a>\n",
@@ -15,12 +24,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ad9a4db",
+   "id": "21263592",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install --upgrade  pydantic google-cloud-aiplatform google-cloud-storage \"shapely<2\" tensorflow-text==2.9.0\n",
-    "\n",
+    "!pip3 install --upgrade  pydantic google-cloud-aiplatform google-cloud-storage \"shapely<2\" tensorflow-text==2.9.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1e3bc9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0e864ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from google.colab import auth\n",
     "auth.authenticate_user()"
    ]
@@ -28,11 +55,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1fdb536",
+   "id": "41cbd97a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "PROJECT_ID = \"gcp-tf-review-classification\"\n",
+    "BUCKET_URI = \"gs://imdb-movie-review-dataset\" \n",
+    "MODEL_BUCKET_URI = \"gs://imdb-movie-review-models\" \n",
+    "REGION = \"us-central1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3052024b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"PROJECT_ID\"] = PROJECT_ID\n",
+    "os.environ[\"REGION\"] = REGION\n",
+    "os.environ[\"BUCKET_URI\"] = BUCKET_URI\n",
+    "os.environ[\"MODEL_BUCKET_URI\"] = MODEL_BUCKET_URI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc139cbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud config set project $PROJECT_ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61f69685",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.cloud import aiplatform\n",
+    "\n",
+    "DATASET_NAME = \"imdb-review-dataset\"\n",
+    "aiplatform.init(project=PROJECT_ID, location=REGION, staging_bucket=BUCKET_URI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6e46636",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = aiplatform.TextDataset.list()\n",
+    "\n",
+    "DATASET_NAME = \"imdb-review-dataset\"\n",
+    "\n",
+    "DATASET_RESOURCE_NAME = \"\"\n",
+    "for dataset in datasets:\n",
+    "    if dataset.display_name == DATASET_NAME:\n",
+    "        DATASET_RESOURCE_NAME = dataset.resource_name\n",
+    "        break\n",
+    "print(f\"Dataset resource name: {DATASET_RESOURCE_NAME}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "380ed827",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = aiplatform.TextDataset(aiplatform.TextDataset.list()[0].resource_name)\n",
+    "\n",
+    "# Automatically creates a directory with the name exported_data_<datetime> - no need to provide\n",
     "exported_files = dataset.export_data(output_dir=BUCKET_URI)\n",
+    "\n",
     "print(\"Following files were exported\")\n",
     "print(exported_files)"
    ]
@@ -40,55 +139,149 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7db8cea3",
+   "id": "8a3a9772",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.cloud import storage \n",
+    "import pydantic \n",
+    "from typing import Any, Dict,List,Literal\n",
     "\n",
-    "def read_gcs_with_full_path(storage_client, filepath):\n",
+    "class ClassificationAnnotation(pydantic.BaseModel):\n",
+    "    displayName: Literal[\"positive\", \"negative\"]\n",
     "\n",
-    "  bucket, blob_name = filepath.split(\"/\")[2], \"/\".join(filepath.split(\"/\")[3:])\n",
-    "  bucket = storage_client.bucket(bucket)\n",
-    "  blob = bucket.blob(blob_name)\n",
+    "class DataItemResourceLabels(pydantic.BaseModel):\n",
+    "    ml_use: Literal[\"training\", \"validation\", \"test\"] = pydantic.Field(alias=\"aiplatform.googleapis.com/ml_use\")\n",
+    "    # Enables us to use ml_use=<x> instead of the long field name\n",
+    "    class Config:\n",
+    "        allow_population_by_field_name = True\n",
     "\n",
-    "  with blob.open(\"r\") as f:\n",
-    "      data = f.read()\n",
-    "\n",
-    "  return data\n",
-    "\n",
-    "def read_gcs_from_exported_dataset(exported_files: List[str]):\n",
-    "\n",
-    "  storage_client = storage.Client()\n",
-    "\n",
-    "  for filepath in exported_files:\n",
-    "\n",
-    "    print(\"Reading the JSON line file\")\n",
-    "    data = read_gcs_with_full_path(storage_client, filepath)\n",
-    "\n",
-    "    print(\"Building instances\")\n",
-    "    instances = [ TextClassificationSample.parse_raw(ins) for ins in data.split(\"\\n\")]\n",
-    "\n",
-    "    print(\"Building data subsets\")\n",
-    "    datasets = {\"training\":{\"inputs\":[], \"labels\": []}, \"validation\":{\"inputs\":[], \"labels\": []}, \"test\":{\"inputs\":[], \"labels\": []}}\n",
-    "    label_map = {\"positive\": 1, \"negative\": 0}\n",
-    "    for ins in instances:\n",
-    "      txt = read_gcs_with_full_path(storage_client, ins.textGcsUri)\n",
-    "      datasets[ins.dataItemResourceLabels.ml_use][\"inputs\"].append(txt)\n",
-    "      datasets[ins.dataItemResourceLabels.ml_use][\"labels\"].append(label_map[ins.classificationAnnotation.displayName])\n",
-    "\n",
-    "  return datasets\n",
-    "\n",
-    "datasets = read_gcs_from_exported_dataset(exported_files)\n",
-    "\n",
-    "for k, v in datasets.items():\n",
-    "  print(f\"{k} dataset contains {len(v['inputs'])} samples\")"
+    "class TextClassificationSample(pydantic.BaseModel):\n",
+    "    textContent: str\n",
+    "    classificationAnnotation: ClassificationAnnotation \n",
+    "    dataItemResourceLabels: DataItemResourceLabels"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea0131c3",
+   "id": "46b13515",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from google.cloud import storage \n",
+    "random.seed(946021)\n",
+    "\n",
+    "# TODO: rename to read_from_gcs\n",
+    "def read_gcs_with_full_path(storage_client, bucket_name, blob_name):\n",
+    "\n",
+    "    bucket = storage_client.bucket(bucket_name)\n",
+    "    blob = bucket.blob(blob_name)\n",
+    "\n",
+    "    with blob.open(\"r\") as f:\n",
+    "        data = f.read()\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "def generate_single_instance(bucket_name, blob_name, ml_use, storage_client):\n",
+    "\n",
+    "    label = None\n",
+    "    if blob_name.endswith(\".txt\"):\n",
+    "        if \"pos\" in blob_name:\n",
+    "            label = \"positive\"\n",
+    "        elif \"neg\" in blob_name:\n",
+    "            label = \"negative\"\n",
+    "        if label:\n",
+    "            instance = TextClassificationSample(\n",
+    "                textContent=read_gcs_with_full_path(\n",
+    "                    storage_client=storage_client,\n",
+    "                    bucket_name=bucket_name,\n",
+    "                    blob_name=blob_name, \n",
+    "                ),\n",
+    "                classificationAnnotation=ClassificationAnnotation(displayName=label),\n",
+    "                dataItemResourceLabels=DataItemResourceLabels(ml_use=ml_use)\n",
+    "            )\n",
+    "            return instance\n",
+    "    return None\n",
+    "\n",
+    "def create_instances(bucket_uri):\n",
+    "\n",
+    "    storage_client = storage.Client()\n",
+    "\n",
+    "    train_gcs_bucket_prefix = \"train\"\n",
+    "    test_gcs_bucket_prefix = \"test\"\n",
+    "    bucket_name = bucket_uri[5:]\n",
+    "\n",
+    "    train_instances = []\n",
+    "\n",
+    "    # delimiter only return the items in that directory (exclude subdirs)\n",
+    "    train_blobs = storage_client.list_blobs(bucket_name, prefix=train_gcs_bucket_prefix)\n",
+    "  \n",
+    "    print(f\"Reading training data from the GCS bucket\")\n",
+    "    for b in train_blobs:\n",
+    "        instance = generate_single_instance(\n",
+    "            bucket_name=bucket_name, blob_name=b.name, ml_use=\"training\", storage_client=storage_client\n",
+    "        )\n",
+    "        if instance:\n",
+    "            train_instances.append(instance)\n",
+    "    print(f\"\\tFound {len(train_instances)} train instances\")\n",
+    "\n",
+    "    test_instances = []\n",
+    "    valid_count, test_count = 0,0\n",
+    "\n",
+    "    test_blobs = storage_client.list_blobs(bucket_name, prefix=test_gcs_bucket_prefix)\n",
+    "    print(f\"Reading test data from the GCS bucket\")\n",
+    "    for b in test_blobs:\n",
+    "        if random.uniform(0,1.0)<0.5:\n",
+    "            valid_count += 1\n",
+    "            ml_use=\"validation\"\n",
+    "        else:\n",
+    "            test_count += 1\n",
+    "            ml_use=\"test\"\n",
+    "\n",
+    "        instance = generate_single_instance(\n",
+    "            bucket_name=bucket_name, blob_name=b.name, ml_use=ml_use, storage_client=storage_client\n",
+    "        )\n",
+    "        if instance: \n",
+    "            test_instances.append(instance)\n",
+    "\n",
+    "    print(f\"\\tFound {valid_count} validation instances and {test_count} test instances\")\n",
+    "\n",
+    "    instances = train_instances + test_instances\n",
+    "    datasets = {\"training\":{\"inputs\":[], \"labels\": []}, \"validation\":{\"inputs\":[], \"labels\": []}, \"test\":{\"inputs\":[], \"labels\": []}}\n",
+    "    label_map = {\"positive\": 1, \"negative\": 0}\n",
+    "    for ins in instances:\n",
+    "        datasets[ins.dataItemResourceLabels.ml_use][\"inputs\"].append(ins.textContent)\n",
+    "        datasets[ins.dataItemResourceLabels.ml_use][\"labels\"].append(label_map[ins.classificationAnnotation.displayName])\n",
+    "    \n",
+    "    return datasets\n",
+    "\n",
+    "datasets = create_instances(BUCKET_URI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d75a602f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets[\"training\"][\"inputs\"][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "259add08",
+   "metadata": {},
+   "source": [
+    "## Downloading the base model from TFHub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0f6363f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,42 +294,132 @@
     "\n",
     "tf.keras.backend.clear_session()\n",
     "\n",
-    "def download_model() -> tf.keras.Model:\n",
-    "  preprocessor = hub.KerasLayer(\n",
-    "    \"https://tfhub.dev/tensorflow/bert_en_uncased_preprocess/3\")\n",
-    "  encoder = hub.KerasLayer(\n",
-    "    \"https://tfhub.dev/tensorflow/small_bert/bert_en_uncased_L-4_H-128_A-2/2\",\n",
-    "    trainable=False)\n",
+    "def download_base_model() -> tf.keras.Model:\n",
+    "    preprocessor = hub.KerasLayer(\n",
+    "        \"https://tfhub.dev/tensorflow/bert_en_uncased_preprocess/3\"\n",
+    "    )\n",
+    "    encoder = hub.KerasLayer(\n",
+    "        \"https://tfhub.dev/tensorflow/small_bert/bert_en_uncased_L-4_H-128_A-2/2\",\n",
+    "        trainable=False\n",
+    "    )\n",
     "\n",
-    "  return preprocessor, encoder\n",
-    "\n",
-    "preprocessor, encoder = download_model()"
+    "    return preprocessor, encoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7873b8b0",
+   "metadata": {},
+   "source": [
+    "## Creating the full TensorFlow model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cc199e8",
+   "id": "ab095d9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_input = tf.keras.layers.Input(shape=(), dtype=tf.string)\n",
+    "def create_model(preprocessor: hub.KerasLayer, encoder: hub.KerasLayer) -> tf.keras.Model:\n",
+    "    \"\"\" Use the pretrained base and mount a head for sentiment analysis \"\"\"\n",
     "\n",
-    "encoder_inputs = preprocessor(text_input)\n",
+    "    text_input = tf.keras.layers.Input(shape=(), dtype=tf.string)\n",
     "\n",
-    "encoder_outputs = encoder(encoder_inputs)\n",
+    "    encoder_inputs = preprocessor(text_input)\n",
     "\n",
-    "pooled_output = encoder_outputs[\"pooled_output\"]      # [batch_size, 512].\n",
-    "#sequence_output = outputs[\"sequence_output\"]  # [batch_size, seq_length, 512].\n",
-    "hidden_layer = tf.keras.layers.Dense(256, activation=\"gelu\")\n",
-    "classif_layer = tf.keras.layers.Dense(1, activation=\"sigmoid\")\n",
-    "hidden_out = hidden_layer(pooled_output)\n",
-    "final_out = classif_layer(hidden_out)\n",
+    "    encoder_outputs = encoder(encoder_inputs)\n",
     "\n",
-    "model = tf.keras.Model(inputs=text_input, outputs=final_out)\n",
-    "model.compile(loss=\"binary_crossentropy\", optimizer=tf.keras.optimizers.Adam(learning_rate=1e-4), metrics=\"accuracy\")\n",
+    "    pooled_output = encoder_outputs[\"pooled_output\"]      # [batch_size, 128].\n",
+    "    hidden_layer = tf.keras.layers.Dense(256, activation=\"gelu\")\n",
+    "    classif_layer = tf.keras.layers.Dense(1, activation=\"sigmoid\")\n",
+    "    hidden_out = hidden_layer(pooled_output)\n",
+    "    final_out = classif_layer(hidden_out)\n",
     "\n",
-    "print(model.summary())"
+    "    model = tf.keras.Model(inputs=text_input, outputs=final_out)\n",
+    "    model.compile(\n",
+    "        loss=\"binary_crossentropy\", \n",
+    "        optimizer=tf.keras.optimizers.Adam(), \n",
+    "        metrics=\"accuracy\"\n",
+    "    )\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bc65447",
+   "metadata": {},
+   "source": [
+    "## Create a TensorFlow dataset to train and validate the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f514f31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_tf_dataset(datasets: Dict[str, Any], subset: str, batch_size: int=128, shuffle:bool = False) -> tf.data.Dataset:\n",
+    "    \"\"\" Create a tf.data.Dataset from the given data subset \"\"\"\n",
+    "    \n",
+    "    dataset = tf.data.Dataset.from_tensor_slices((datasets[subset][\"inputs\"], datasets[subset][\"labels\"]))\n",
+    "    dataset = dataset.shuffle(batch_size*10) if shuffle else dataset \n",
+    "    dataset = dataset.batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
+    "    return dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6356147",
+   "metadata": {},
+   "source": [
+    "## Train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7f30461",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 128\n",
+    "epochs = 5\n",
+    "\n",
+    "# Generate datasets\n",
+    "train_ds = generate_tf_dataset(datasets, \"training\", batch_size=batch_size, shuffle=True)\n",
+    "valid_ds = generate_tf_dataset(datasets, \"validation\", batch_size=batch_size)\n",
+    "test_ds = generate_tf_dataset(datasets, \"test\", batch_size=batch_size)\n",
+    "\n",
+    "# Create the model\n",
+    "preprocessor, encoder = download_base_model() \n",
+    "model = create_model(preprocessor, encoder)\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(train_ds, epochs=epochs, validation_data=valid_ds)\n",
+    "\n",
+    "# Save the model\n",
+    "tf.saved_model.save(model, \"./text_classifier\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a36a55e",
+   "metadata": {},
+   "source": [
+    "## Upload the model to GCS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ab5f527",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gsutil cp -r ./text_classifier $MODEL_BUCKET_URI"
    ]
   }
  ],
